--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-joi-validator": "^2.0.0",
+    "imgur": "^0.2.1",
     "joi": "^13.6.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.12"
